--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-map-interaction": "^2.1.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-spinners-css": "^2.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
